test/fail/entitysimplepropkind.app
// Encountered: {Paper}

application test

entity User {
  authoredPapers :: {Paper}
}

entity Paper {}
